Clean NTDLL and preadded syscalls are added!

--- a/Celeborn.vcxproj.filters
+++ b/Celeborn.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="predefinedSyscalls.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
 </Project>
